# Aspose.Slides-for-Python-via-.NET

./: .gitignore  LICENSE  README.md  requirements.txt
examples/: main.py
examples/data/: PresentationPic.pptx  charts_create_external_workbook.pptx  charts_data_source_type_property_added_out.pptx  charts_external_workbook.xlsx  doc3.ppt  layout_presentation.ppt  open_presentation.ppt  presentation_with_media.pptx  props_ppt_with_password.ppt  shapes_add_stretch_offset_out.pptx  smart_art_check_hidden_out.pptx  tables.pptx
examples/src/: __init__.py
examples/src/ActiveX/: LinkingVideoActiveXControl.py  ManageActiveXControl.py
examples/src/ApplyLicense/: MeteredLicensing.py
examples/src/Charts/: AddColorToDataPoints.py  AddCustomError.py  AddDoughnutCallout.py  AddErrorBars.py  AddingCustomLines.py  AnimatingCategoriesElements.py  AnimatingSeries.py  AnimatingSeriesElements.py  AutomaticChartSeriescolor.py  BoxChart.py  CalculateFormulas.py  ChangeChartCategoryAxis.py  ChangeColorOfCategories.py  ChartDataCell_Formulas.py  ChartDataPointIndex.py  (+172 more)
integrations/: README.md
integrations/docling-backend/: pyproject.toml
integrations/marker-extension/: pyproject.toml
integrations/markitdown-plugin/: pyproject.toml  run_tests.py
integrations/markitdown-plugin/src/aspose_slides_markitdown_plugin/: __init__.py  _plugin.py
integrations/markitdown-plugin/tests/: __init__.py  test_accept.py  test_convert.py
integrations/markitdown-plugin/tests/test_data/: test.pptx  test_password.pptx
showcases/Pptx2VideoConverter/: .gitignore  pptx2video_converter.py
(+1129 files in other folders)
